<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:layout_margin="10dp"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_number1"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColorHint="#673AB7"
        android:backgroundTint="#673AB7"
        android:backgroundTintMode="add"
        android:hint="@string/number_1"
        android:inputType="number"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/et_number2"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColorHint="#673AB7"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="#673AB7"
        android:backgroundTintMode="add"
        android:hint="@string/number_2"
        android:inputType="number"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/add"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_subtract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/subtract"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/multiply"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/divide"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="30sp"
        android:textColor="#673AB7"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center" />

</LinearLayout>
